versioned_docs/version-23.2/get-started/licenses.mdx
---
title: Redpanda Licensing
---

<head>
    <meta name="title" content="Redpanda licensing | Redpanda Docs"/>
    <meta name="description" content="Redpanda is free and source-available at the Redpanda GitHub repo. Additional features are included with an enterprise license."/>
</head>

import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';
import ValuesYaml from '../manage/kubernetes/shared/_values-yaml.mdx'


Redpanda Community Edition is free and source-available at the [Redpanda GitHub repo](https://github.com/redpanda-data/redpanda). Additional features are included with a license for Redpanda Enterprise Edition.

## Redpanda Community Edition

Redpanda Community Edition is licensed with the Redpanda [Business Source License](https://github.com/redpanda-data/redpanda/blob/dev/licenses/bsl.md) (BSL). These core features are free and source-available. 

:::note
* Users cannot provide Redpanda as a commercial streaming or queuing service to others. 
* The BSL code converts to Apache 2.0 licensing four years after each code merge.
:::


## Redpanda Enterprise Edition

Redpanda Enterprise Edition is licensed with the [Redpanda Community License](https://github.com/redpanda-data/redpanda/blob/dev/licenses/rcl.md) (RCL). It includes the free features licensed under the Redpanda BSL, as well as the following features:

* [Tiered Storage](../../manage/tiered-storage), including [Data Archiving](../../manage/data-archiving)
* [Remote Read Replicas](../../manage/remote-read-replicas)
* [Continuous Data Balancing](../../manage/cluster-maintenance/continuous-data-balancing)
* [Kerberos authentication](../../manage/security/authentication/#enable-kerberos)
* [Redpanda Console single sign-on authentication](../../manage/security/console/authentication)
* [Redpanda Console role-based access control](../../manage/security/console/authorization)
* [Server-side schema ID validation](../../manage/schema-id-validation)

Enterprise features require a license key. You can evaluate enterprise features with a free 30-day trial. Contact [Redpanda Sales](https://redpanda.com/try-redpanda?section=enterprise-trial) to request a trial license, to extend your trial period, or to purchase an Enterprise Edition license. If you access a Redpanda Enterprise feature without a valid license, you get the following message: 

```
Looks like you’ve enabled a Redpanda Enterprise feature without a valid license. Please enter an active Redpanda license key (e.g. rpk cluster license set <key>). If you don’t have one, please request a new/trial license at https://redpanda.com/license-request.
```

### Apply a license key to Redpanda

A license key unlocks Redpanda Enterprise Edition features.

<Tabs groupId="platform" queryString>
<TabItem value="manual" label="Manual (Linux or Docker)" default>

To apply the license key to your cluster, run:

`rpk cluster license set` 

Either provide a path to a file containing the license, or provide the license string inline. For example, assuming you use the default admin host/port of `0.0.0.0:9644`, run:

```bash
rpk cluster license set --path <path-to-license-file> --api-urls 0.0.0.0:9644
```

Or:

```bash
rpk cluster license set <license-string>
```

If neither the path nor the license string are provided, `rpk` looks for the license in `/etc/redpanda/redpanda.license`.

</TabItem>
<TabItem value="kubernetes" label="Kubernetes">

To apply the license key to your cluster using the Helm chart, 
either provide a secret that contains the license, or provide the license string inline:

- Use a secret:

  <Tabs groupId="helm-config" queryString>
  <TabItem value="values" label="--values">

  ```yaml title="license-key.yaml"
  license_secret_ref:
    secret_name: <name-of-the-secret>
    secret_key: <key-where-license-is-stored>
  ```

  ```bash
  helm upgrade --install redpanda redpanda/redpanda -n redpanda --create-namespace \
  --values license-key.yaml
  ```

  </TabItem>
  <TabItem value="flags" label="--set">

  ```bash
  helm upgrade --install redpanda redpanda/redpanda -n redpanda --create-namespace \
    --set license_secret_ref.secret_name=<name-of-the-secret> \
    --set license_secret_ref.secret_key=<key-where-license-is-stored>
  ```

  </TabItem>
  </Tabs>

  :::note
  <ValuesYaml path="license_secret_ref"/>
  :::

- Use an inline string:

  <Tabs groupId="helm-config" queryString>
  <TabItem value="values" label="--values">

  ```yaml title="license-key.yaml"
  license_key: <license-string>
  ```

  ```bash
  helm upgrade --install redpanda redpanda/redpanda -n redpanda --create-namespace \
  --values license-key.yaml
  ```

  </TabItem>
  <TabItem value="flags" label="--set">

  ```bash
  helm upgrade --install redpanda redpanda/redpanda -n redpanda --create-namespace \
    --set license_key=<license-string> 
  ```

  </TabItem>
  </Tabs>

  :::note
  <ValuesYaml path="license_key"/>
  :::

If neither the path nor the license string are provided, Redpanda looks for the license in `/etc/redpanda/redpanda.license`.

</TabItem>
</Tabs>

### Check the status of a license

To check the status of your current license, run:

`rpk cluster license info --api-urls 0.0.0.0:9644`

Redpanda sends warning messages in the cluster logs if you enable enterprise features without a valid license key.

## Apply a license key to Redpanda Console

To use an Enterprise feature with Redpanda Console, you must provide Redpanda Console with its own copy of your license key.
You have two options for providing the license:

1. Specify the path to the license key file either in the `redpanda.licenseFilepath` property of the `/etc/redpanda/redpanda-console-config.yaml` file, or in the `REDPANDA_LICENSE_FILEPATH` environment variable.
2. Specify the license key file contents directly either in the `redpanda.license` property of the YAML file, or in the `REDPANDA_LICENSE`environment variable.

Redpanda Console checks the license key status on startup and warns you 30 days before the license expires. You can view the license key's expiration date in the startup logs.
If the license key expires at runtime, Redpanda Console shuts down. If the license has already
expired at startup, Redpanda Console prints an error message and exits.